--- a/css/about.css
+++ b/css/about.css
@@ -1,12 +1,7 @@
 /* 
 * Seth Tal
 * 01/12/2020
-* Main.css file for all of the standardized elements on the webpage
-
-TODO: give credit to these icons bellow:
-    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+* styling for list of projects
 */
 
 /* --------------------------------------------------------------------------------------------- */
@@ -19,7 +14,7 @@ TODO: give credit to these icons bellow:
     border-radius: 1em;
 }
 
-#about-section {
+#project-list {
     width: 100%;
     height: 100%;
     /* border-radius: 1em; */
@@ -28,6 +23,99 @@ TODO: give credit to these icons bellow:
     display: grid;
     grid-template-columns: repeat(15, 6.66%);
     grid-template-rows: repeat(15, 6.66%);
+}
+
+#list-header {
+    grid-column: 2 / 15;
+    grid-row: 2 / 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#list-header h1 {
+    font-size: 3.5em;
+    text-shadow: 5px 5px 15px rgba(18, 18, 18, 0.5);
+}
+
+#projects {
+    grid-column: 2 / 15;
+    grid-row: 5 / 15;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    
+    overflow-x: auto;
+}
+
+#project {
+    width: 15em;
+    height: 15em;
+
+    margin: 0.25em;
+    border-radius: 1em;
+    background: #121212;
+    backface-visibility: hidden;
+    
+    overflow: hidden;
+    transition: 250ms ease;
+}
+
+#project:hover {
+    cursor: pointer;
+}
+
+#project:hover img {
+    opacity: 0.3;
+}
+#project:hover .middle {
+    opacity: 1;
+}
+
+#project a {
+    box-sizing: border-box;
+    width: 15em;
+    height: 10em;
+
+    margin: 0;
+    padding: 0;
+}
+
+#project img {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+
+    border-radius: 1em;
+
+    object-fit: cover;
+
+    transition: 250ms ease;
+}
+
+.middle {
+
+    border-radius: 0 0 1em 1em;
+
+    background: #121212;
+    color: #ededed;
+
+    transform: translate(0px, -100%);
+    text-align: center;
+
+    opacity: 0;
+    z-index: 10;
+    transition: 250ms ease;
+}
+
+#text {
+    padding: 16px 32px;
+    font-size: 16px;
+    color: #ededed;
 }
 
 
@@ -48,51 +136,3 @@ TODO: give credit to these icons bellow:
     height: auto;
     margin-bottom: 3.5rem;
 }
-
-/* ------------------------------------------- */
-#about-education {
-    grid-column: 2 / 8;
-    grid-row: 4 / 10;
-
-    /* border: 2px solid green; */
-    border-radius: 1em;
-
-    background: rgba(18, 18, 18, 0.25);
-    box-shadow: 10px 10px 15px rgba(18, 18, 18, 0.5);
-}
-
-#about-education h1 {
-    width: auto;
-    height: 20%;
-    margin-top: 1rem;
-    margin-left: 3rem;
-
-    text-align: left;
-}
-
-/* ------------------------------------------- */
-#about-skills {
-    grid-column: 9 / 15;
-    grid-row: 2 / 15;
-
-    /* border: 2px solid red; */
-    border-radius: 1em 1em 1em 1em;
-
-    background: rgba(18, 18, 18, 0.25);
-    box-shadow: 10px 10px 15px rgba(18, 18, 18, 0.5),
-                -10px 10px 20px rgba(18, 18, 18, 0.5);
-}
-
-/* ------------------------------------------- */
-#about-extra {
-    grid-column: 2 / 9;
-    grid-row: 11 / 15;
-
-    /* border: 2px solid blue; */
-    border-radius: 1em 0em 1em 1em;
-
-    background: rgba(18, 18, 18, 0.25);
-    box-shadow: -10px 10px 15px rgba(18, 18, 18, 0.5);
-}
-
-/* --------------------------------------------------------------------------------------------- */
