--- a/css/about.css
+++ b/css/about.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     
     overflow-x: auto;
