--- a/css/about.css
+++ b/css/about.css
@@ -52,7 +52,7 @@
     overflow-x: auto;
 }
 
-#project {
+.project {
     width: 15em;
     height: 15em;
 
@@ -65,18 +65,18 @@
     transition: 250ms ease;
 }
 
-#project:hover {
+.project:hover {
     cursor: pointer;
 }
 
-#project:hover img {
+.project:hover img {
     opacity: 0.3;
 }
-#project:hover .middle {
+.project:hover .middle {
     opacity: 1;
 }
 
-#project a {
+.project a {
     box-sizing: border-box;
     width: 15em;
     height: 10em;
@@ -85,7 +85,7 @@
     padding: 0;
 }
 
-#project img {
+.project img {
     opacity: 1;
     width: 100%;
     height: 100%;
@@ -105,14 +105,13 @@
     color: #ededed;
 
     transform: translate(0px, -100%);
-    text-align: center;
 
     opacity: 0;
     z-index: 10;
     transition: 250ms ease;
 }
 
-#text {
+.text {
     padding: 16px 32px;
     font-size: 16px;
     color: #ededed;
@@ -135,4 +134,17 @@
     width: 50px;
     height: auto;
     margin-bottom: 3.5rem;
+}
+/* --------------------------------------------------------------------------------------------- */
+.text-highlight {
+    font-weight: bold;
+    color: #8a576e;
+}
+
+.text-alignment-center {
+    text-align: center;
+}
+
+.text-pad-bottom {
+    padding-bottom: 1rem;
 }
