Once again, minor structural changes to project content

--- a/css/about.css
+++ b/css/about.css
@@ -44,11 +44,11 @@
     grid-row: 5 / 15;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    
+
     overflow-x: auto;
 }
 
