--- a/css/about.css
+++ b/css/about.css
@@ -37,6 +37,8 @@
 #list-header h1 {
     font-size: 3.5em;
     text-shadow: 5px 5px 15px rgba(18, 18, 18, 0.5);
+
+    transition: ease-in-out 250ms;
 }
 
 #projects {
