--- a/css/resume.css
+++ b/css/resume.css
@@ -24,6 +24,8 @@ body
 {
     width: 100%;
     height: 100%;
+
+    background-color: #121212;
 }
 
 :root /* For Variables */ 
@@ -54,8 +56,10 @@ a:visited {
     /* padding: 0; */
     width: 850px;
     height: 1100px;
+    
+    box-shadow: 5px 5px 15px white;
 
-    background-color: #121212;
+    background-color: #ffffff;
     color: #121212;
 }
 
@@ -64,22 +68,35 @@ a:visited {
 #resume-header
 {
     position: relative;
-    height: 350px;
+    height: 250px;
 
     display: flex;
     flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
 
-    background-color: #ededed;
+    border-bottom: 3px solid #121212;
+
+    /* background-color: #ededed; */
 }
 
 #header-intro
 {
-    width: 50%;
+    width: 65%;
 }
 
 #header-intro *
 {
-    margin: 0.25em 10px;
+    margin: 10px 10px;
+}
+
+#profile-img
+{
+    width: 208px;
+    height: 208px;
+    margin: 0;
+
+    border-radius: 50%;
 }
 
 #header-contact-info
@@ -89,17 +106,20 @@ a:visited {
 
 #resume-header h1
 {
-    font-size: 3.5em;
+    margin-bottom: 0;
+    font-size: 2.25em;
 }
 
 #resume-header h2
 {
-    font-size: 1.75em;
+    font-size: 1.5em;
+    font-weight: normal;
 }
 
 #resume-header h3
 {
-    font-size: 1em;
+    font-size: 0.8em;
+    font-weight: bolder;
 }
 
 
@@ -140,7 +160,7 @@ a:visited {
 {
     height: 600px;
     
-    background-color: #cdcdcd;
+    /* background-color: #cdcdcd; */
 }
 
 
@@ -150,7 +170,7 @@ a:visited {
 {
     height: 150px;
 
-    background-color: #ababab;
+    /* background-color: #ababab; */
 }
 
 
